3.0.0-alpha5 (2013-??-??)
	* Added: jsonSerialize() for creating jCal and jCard documents.
	* Added: helper method to parse vCard dates and times.
	* Added: Specialized classes for FLOAT, LANGUAGE-TAG, TIME, TIMESTAMP,
	  DATE-AND-OR-TIME, CAL-ADDRESS, UNKNOWN and UTC-OFFSET properties.
	* Removed: CommaSeparatedText property. Now included into Text.

3.0.0-alpha4 (2013-05-31)
	* Added: It's now possible to send parser options to the splitter classes.
	* Added: A few tweaks to improve component and property creation.

3.0.0-alpha3 (2013-05-13)
	* Changed: propertyMap, valueMap and componentMap are now static
	  properties.
	* Changed: Component::remove() will throw an exception when trying to
	  a node that's not a child of said component.
	* Added: Splitter objects are now faster, line numbers are accurately
	  reported and use less memory.
	* Added: MimeDir parser can now continue parsing with the same stream
	  buffer.
	* Fixed: vobjectvalidate.php is operational again.
	* Fixed: \r is properly stripped in text values.
	* Fixed: QUOTED-PRINTABLE is now correctly encoded as well as encoded, for
	  vCards 2.1.
	* Fixed: Parser assumes vCard 2.1, if no version was supplied.

3.0.0-alpha2 (2013-05-22)
	* Fixed: vCard URL properties were referencing a non-existant class.

3.0.0-alpha1 (2013-05-21)
	* Fixed: Now correctly dealing with escaping of properties. This solves
	  the problem with double-backslashes where they don't belong.
	* Added: Easy support for properties with more than one value, using
	  setParts and getParts.
	* Added: Support for broken 2.1 vCards produced by microsoft.
	* Added: Automatically decoding quoted-printable values.
	* Added: Automatically decoding base64 values.
	* Added: Decoding RFC6868 parameter values (uses ^ as an escape
	  character).
	* Added: Fancy new MimeDir parser that can also parse streams.
	* Added: Automatically mapping many, many properties to a property-class
	  with specialized API's.